@@ -12,7 +12,7 @@
 #  
 #  See the README file for license, bugs etc.
 #
-# $Id: Coccinella.tcl,v 1.56 2004-05-21 06:58:08 matben Exp $
+# $Id: Coccinella.tcl,v 1.57 2004-05-29 13:20:58 matben Exp $
 
 # TclKit loading mechanism.
 package provide app-Coccinella 1.0
@@ -101,7 +101,7 @@ proc resolve_cmd_realpath {infile} {
 # default file, never read.
 set prefs(majorVers) 0
 set prefs(minorVers) 94
-set prefs(releaseVers) 10
+set prefs(releaseVers) 11
 set prefs(fullVers) $prefs(majorVers).$prefs(minorVers).$prefs(releaseVers)
 
 # We may be embedded in another application, say an ActiveX component.
